--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,36 +37,8 @@ body {
 /* ------ LOADING SCREEN ------ */
 /* ------ LOADING SCREEN ------ */
 
-.loading-screen {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent background */
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  color: white;
-  font-size: 1.5rem;
-  z-index: 9999; /* Ensure it overlays other content */
-}
-
-
-
-.error-messages {
-  margin-top: 10px;
-  color: red;
-}
-
-.error-messages ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-.error-messages li {
-  font-size: 0.75rem;
+.fade-transition {
+    transition: color 2s ease-in-out;
 }
 
 /* ------ END LOADING SCREEN ------ */
