--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,6 +32,13 @@ body {
     }
 }
 
+/* colors i like */
+/* BLUE */
+/* #007BFF  */
+/* rgba(0, 123, 255, 1) */
+
+/* end blue */
+
 /* ------ LOADING SCREEN ------ */
 /* ------ LOADING SCREEN ------ */
 /* ------ LOADING SCREEN ------ */
@@ -51,9 +58,7 @@ body {
 /* ------ NAV BAR ------ */
 /* ------ NAV BAR ------ */
 
-.burger-button {
-}
-
+/* main nav button */
 .burger-button-burger {
     transition: transform 0.3s ease;
 }
@@ -86,40 +91,46 @@ body {
 .burger-button:hover .burger-button-bottom-right {
     transform: translate(-5.5px, -5.5px);
 }
+/* end main nav button */
 
-.burger-button-circle {
-    transition: transform 0.3s ease;
-    transform: scale(0);
-}
-
-.burger-button:hover .burger-button-circle {
-    animation: spring 0.3s ease-out forwards;
-    animation-delay: 0.9s;
+/* control button  */
+.control-button-top-circle,
+.control-button-bottom-circle {
+    /* transition: transform 0.8s ease; */
+    transition: transform 0.8s cubic-bezier(0.68, -0.55, 0.27, 1.55);
 }
 
-.burger-button .burger-button-circle {
-    animation: spring-reverse 0.3s ease-out forwards;
+.control-button:hover .control-button-top-circle {
+    transform: translate(80px, 0px);
 }
 
-@keyframes spring {
-    0% {
-        transform: scale(1.2);
-    }
-    50% {
-        transform: scale(0.9);
-    }
-    100% {
-        transform: scale(1);
-    }
+.control-button:hover .control-button-bottom-circle {
+    transform: translate(-80px, 0px);
 }
-@keyframes spring-reverse {
-    0% {
-        transform: scale(1);
-    }
-    50% {
-        transform: scale(1.2);
-    }
-    100% {
-        transform: scale(0);
-    }
+
+.control-button:hover {
+    color: #007bff;
 }
+.control-button-text {
+    color: black;
+    background-color: none;
+    transition: background-color ease;
+}
+.control-button:hover .control-button-text {
+    background-color: rgba(0, 123, 255, 0.25);
+}
+/* end control button */
+
+/* audio button */
+
+
+/* end audio button */
+
+/* about button */
+/* end about button */
+
+/* contact button */
+/* end contact button */
+
+/* close button */
+/* end close button */
