--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -170,7 +170,6 @@ body {
 .calf2{}
  */
 
-
 /* contact button */
 
 .contact-button-text {
@@ -226,3 +225,129 @@ body {
 }
 
 /* end close button */
+
+/* ----------     SCANLINES     ----------- */
+/* ----------     SCANLINES     ----------- */
+/* ----------     SCANLINES     ----------- */
+
+/* Scanlines && Flicker  */
+
+@keyframes blink {
+    to {
+        opacity: 0;
+    }
+}
+
+@keyframes flicker {
+    0% {
+        opacity: 0.15795;
+    }
+    5% {
+        opacity: 0.31511;
+    }
+    10% {
+        opacity: 0.94554;
+    }
+    15% {
+        opacity: 0.2469;
+    }
+    20% {
+        opacity: 0.62031;
+    }
+    25% {
+        opacity: 0.0293;
+    }
+    30% {
+        opacity: 0.00899;
+    }
+    35% {
+        opacity: 0.5344;
+    }
+    40% {
+        opacity: 0.12778;
+    }
+    45% {
+        opacity: 0.52042;
+    }
+    50% {
+        opacity: 0.3823;
+    }
+    55% {
+        opacity: 0.2198;
+    }
+    60% {
+        opacity: 0.9383;
+    }
+    65% {
+        opacity: 0.86615;
+    }
+    70% {
+        opacity: 0.68695;
+    }
+    75% {
+        opacity: 0.55749;
+    }
+    80% {
+        opacity: 0.96984;
+    }
+    85% {
+        opacity: 0.0361;
+    }
+    90% {
+        opacity: 0.24467;
+    }
+    95% {
+        opacity: 0.08351;
+    }
+    100% {
+        opacity: 0.54813;
+    }
+}
+
+.retro-scanlines {
+    height: 1px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 1px;
+    z-index: 25;
+}
+/* scanlines are just made from varying linear-gradient values */
+
+.retro-scanlines:before {
+    background: linear-gradient(#101010 50%, rgba(16, 16, 16, 0.2) 50%),
+        linear-gradient(
+            90deg,
+            rgba(255, 0, 0, 0.03),
+            rgba(0, 255, 0, 0.02),
+            rgba(0, 0, 255, 0.03)
+        );
+    background-size: 100% 2px, 8px 100%;
+    content: '';
+    display: block;
+    pointer-events: none;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 25;
+}
+
+.retro-scanlines:after {
+    animation: flicker 0.9s infinite;
+    background: rgba(16, 16, 16, 0.2);
+    content: '';
+    display: block;
+    pointer-events: none;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 25;
+}
+
+/* ----------     END SCANLINES     ----------- */
+/* ----------     END SCANLINES     ----------- */
+/* ----------     END SCANLINES     ----------- */
