--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -38,6 +38,12 @@ body {
     src: url('/Fonts/Poppins-Regular.ttf') format('truetype');
     font-style: normal;
 }
+
+@font-face {
+    font-family: 'Poppins Bold';
+    src: url('/Fonts/Poppins-Bold.ttf') format('truetype');
+    font-style: normal;
+}
 @font-face {
     font-family: 'Bebas Neue';
     src: url('/Fonts/BebasNeue-Regular.ttf') format('truetype');
@@ -63,6 +69,18 @@ body {
 .blue-to-white {
     filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(180deg)
         brightness(100%);
+}
+.background-fade {
+    animation: backgroundOpacityFade 1s forwards;
+}
+
+@keyframes backgroundOpacityFade {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
 }
 /* ------ END LOADING SCREEN ------ */
 /* ------ END LOADING SCREEN ------ */
@@ -368,6 +386,9 @@ body {
 /* ----------     END SCANLINES     ----------- */
 /* ----------     END SCANLINES     ----------- */
 
+/* background testingggggggg */
+/*  */
+
 .blur {
     height: 15rem;
     width: 15rem;
@@ -421,4 +442,72 @@ body {
         transparent 1px
     );
     background-size: 80px 80px;
+}
+/* 
+.glass-effect {
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+} */
+
+.cookie-policy {
+    /* background: linear-gradient(
+        to right top,
+        #00aaff,
+        rgba(0, 170, 255, 0) 70%
+    ); */
+    /* background-color: #007bff; */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(135deg, #4ebeff, #ffffff);
+}
+
+/* star */
+.night-sky {
+    background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
+    overflow: hidden;
+}
+
+.starsSmall,
+.starsSmall:after {
+    width: 1px;
+    height: 1px;
+    background: transparent;
+    animation: starMove 50s linear infinite;
+    content: '';
+    position: absolute;
+    top: 0px;
+}
+
+.starsMedium,
+.starsMedium:after {
+    width: 2px;
+    height: 2px;
+    background: transparent;
+    animation: starMove 100s linear infinite;
+    content: '';
+    position: absolute;
+    top: 0px;
+}
+
+.starsLarge,
+.starsLarge:after {
+    width: 3px;
+    height: 3px;
+    background: transparent;
+    animation: starMove 150s linear infinite;
+    content: '';
+    position: absolute;
+    top: 0px;
+}
+
+@keyframes starMove {
+    from {
+        transform: translateY(0px);
+    }
+    to {
+        transform: translateY(-1000px);
+    }
 }
