--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -130,7 +130,6 @@ body {
 /* control button  */
 .control-button-top-circle,
 .control-button-bottom-circle {
-    /* transition: transform 0.8s ease; */
     transition: transform 0.6s cubic-bezier(0.68, -0.55, 0.27, 1.55);
 }
 
@@ -193,16 +192,6 @@ body {
 .about-button:hover .about-button-text {
     background-color: rgba(0, 123, 255, 0.25);
 }
-/* .figure{}
-.arm1{}
-.wrist1{}
-.arm2{}
-.wrist2{}
-.leg1{}
-.calf1{}
-.leg2{}
-.calf2{}
- */
 
 /* contact button */
 
@@ -214,7 +203,6 @@ body {
 .contact-button-smiley {
     transition: transform 0.6s cubic-bezier(0.68, -0.55, 0.27, 1.55);
     transform: scale(0);
-    /* transition-delay: 0.6s; */
 }
 
 .contact-button:hover .contact-button-smiley {
@@ -259,6 +247,63 @@ body {
 }
 
 /* end close button */
+
+/* ----------     STARS BACKGROUND     ----------- */
+/* ----------     STARS BACKGROUND     ----------- */
+/* ----------     STARS BACKGROUND     ----------- */
+/* ----------     STARS BACKGROUND     ----------- */
+
+.night-sky {
+    background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
+    overflow: hidden;
+}
+
+.starsSmall,
+.starsSmall:after {
+    width: 1px;
+    height: 1px;
+    background: transparent;
+    animation: starMove 50s linear infinite;
+    content: '';
+    position: absolute;
+    top: 0px;
+}
+
+.starsMedium,
+.starsMedium:after {
+    width: 2px;
+    height: 2px;
+    background: transparent;
+    animation: starMove 100s linear infinite;
+    content: '';
+    position: absolute;
+    top: 0px;
+}
+
+.starsLarge,
+.starsLarge:after {
+    width: 3px;
+    height: 3px;
+    background: transparent;
+    animation: starMove 150s linear infinite;
+    content: '';
+    position: absolute;
+    top: 0px;
+}
+
+@keyframes starMove {
+    from {
+        transform: translateY(0px);
+    }
+    to {
+        transform: translateY(-1000px);
+    }
+}
+
+/* ----------     END STARS BACKGROUND     ----------- */
+/* ----------     END STARS BACKGROUND     ----------- */
+/* ----------     END STARS BACKGROUND     ----------- */
+/* ----------     END STARS BACKGROUND     ----------- */
 
 /* ----------     SCANLINES     ----------- */
 /* ----------     SCANLINES     ----------- */
@@ -386,9 +431,8 @@ body {
 /* ----------     END SCANLINES     ----------- */
 /* ----------     END SCANLINES     ----------- */
 
-/* background testingggggggg */
-/*  */
-
+/* cool blur and grid effect */
+/* 
 .blur {
     height: 15rem;
     width: 15rem;
@@ -442,72 +486,7 @@ body {
         transparent 1px
     );
     background-size: 80px 80px;
-}
-/* 
-.glass-effect {
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
 } */
 
-.cookie-policy {
-    /* background: linear-gradient(
-        to right top,
-        #00aaff,
-        rgba(0, 170, 255, 0) 70%
-    ); */
-    /* background-color: #007bff; */
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(135deg, #4ebeff, #ffffff);
-}
-
-/* star */
-.night-sky {
-    background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
-    overflow: hidden;
-}
-
-.starsSmall,
-.starsSmall:after {
-    width: 1px;
-    height: 1px;
-    background: transparent;
-    animation: starMove 50s linear infinite;
-    content: '';
-    position: absolute;
-    top: 0px;
-}
-
-.starsMedium,
-.starsMedium:after {
-    width: 2px;
-    height: 2px;
-    background: transparent;
-    animation: starMove 100s linear infinite;
-    content: '';
-    position: absolute;
-    top: 0px;
-}
-
-.starsLarge,
-.starsLarge:after {
-    width: 3px;
-    height: 3px;
-    background: transparent;
-    animation: starMove 150s linear infinite;
-    content: '';
-    position: absolute;
-    top: 0px;
-}
-
-@keyframes starMove {
-    from {
-        transform: translateY(0px);
-    }
-    to {
-        transform: translateY(-1000px);
-    }
-}
+/* cool purple to blue gradient */
+/* bg-gradient-to-br from-purple-400 via-blue-500 to-indigo-600 */
