--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -461,6 +461,302 @@ body {
 /* ----------     END SCANLINES     ----------- */
 /* ----------     END SCANLINES     ----------- */
 
+/* ----------     SPINNER     ----------- */
+/* ----------     SPINNER     ----------- */
+/* ----------     SPINNER     ----------- */
+
+@keyframes box-animation-back {
+    0% {
+        transform: rotate(0);
+    }
+    25% {
+        transform: rotate(90deg);
+    }
+    50% {
+        transform: rotate(180deg);
+    }
+    75% {
+        transform: rotate(270deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes box-animation-front {
+    0% {
+        transform: rotate(45deg);
+    }
+    25% {
+        transform: rotate(-45deg);
+    }
+    50% {
+        transform: rotate(-135deg);
+    }
+    75% {
+        transform: rotate(-225deg);
+    }
+    100% {
+        transform: rotate(-315deg);
+    }
+}
+
+.rotating-box-back {
+    animation: box-animation-back 3s ease-in-out 0s infinite alternate;
+}
+
+.rotating-box-front {
+    transform: rotate(45deg);
+    animation: box-animation-front 3s ease-in-out 0s infinite alternate;
+}
+
+/* testing */
+#loading-bar-animation {
+    position: relative;
+    width: 350px;
+}
+
+#loading-bar-animation .loader {
+    animation: rotation 3.5s forwards linear;
+    position: absolute;
+    top: -120px;
+    left: calc(50% - 35px);
+    border: 5px solid rgba(255, 255, 255, 0.3);
+    border-radius: 50%;
+    border-top-color: #007bff;
+    height: 70px;
+    width: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+@keyframes rotation {
+    0% {
+        transform: rotate(0);
+    }
+    84% {
+        transform: rotate(500deg);
+    }
+    95% {
+        border: 5px solid rgba(255, 255, 255, 0.3);
+        border-top-color: #007bff;
+    }
+    100% {
+        transform: rotate(1800deg);
+        border: 5px solid #2ed573;
+    }
+}
+
+#loading-bar-animation .loader:before {
+    font-weight: 900;
+    font-size: 2em;
+    color: #2ed573;
+    animation: overspin 0.5s forwards cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    animation-delay: 3.4s;
+    transform: rotate(180deg);
+    opacity: 0;
+}
+
+@keyframes overspin {
+    0% {
+        transform: rotate(180deg);
+        opacity: 0;
+    }
+    100% {
+        transform: rotate(0);
+        opacity: 1;
+    }
+}
+
+#loading-bar-animation #mouse {
+    position: absolute;
+    top: 100px;
+    left: 80%;
+    animation: mouse-positioning 3.5s forwards,
+        mouse-positioning-final 1s forwards;
+    animation-delay: 0s, 4s;
+    z-index: 20;
+}
+
+@keyframes mouse-positioning {
+    30% {
+        top: 100px;
+        left: 80%;
+    }
+    50% {
+        top: 15px;
+        left: 4%;
+    }
+    60% {
+        top: 15px;
+        left: 4%;
+    }
+    75% {
+        top: 5px;
+        left: 7.3%;
+    }
+    85% {
+        top: 5px;
+        left: 7.3%;
+    }
+    95% {
+        top: 15px;
+        left: 105%;
+    }
+    100% {
+        top: 15px;
+        left: 105%;
+    }
+}
+
+@keyframes mouse-positioning-final {
+    0% {
+        top: 15px;
+        left: 105%;
+    }
+    100% {
+        top: -85px;
+        left: 53%;
+    }
+}
+
+#loading-bar-animation .loading-bar {
+    width: 100%;
+    height: 30px;
+    background: rgba(255, 255, 255, 0.3);
+    border-radius: 5px;
+}
+
+#loading-bar-animation .loading-bar .progress-bar {
+    animation: progress 3.5s forwards;
+    width: 6%;
+    height: 100%;
+    background: #007bff;
+    border-radius: 5px;
+    border: 0 solid #0abde3;
+}
+
+@keyframes progress {
+    0% {
+        width: 6%;
+    }
+    50% {
+        border: 0 solid #0abde3;
+    }
+    51% {
+        border: 4px solid #0abde3;
+    }
+    85% {
+        width: 11%;
+    }
+    95% {
+        border: 4px solid #0abde3;
+        width: 100%;
+    }
+    100% {
+        width: 100%;
+    }
+}
+
+#loading-bar-animation .status {
+    margin-top: 10px;
+}
+
+#loading-bar-animation .status .state {
+    float: left;
+    font-size: 0.9em;
+    letter-spacing: 1pt;
+    text-transform: uppercase;
+    width: 100px;
+    height: 20px;
+    position: relative;
+}
+
+#loading-bar-animation .status .state:before {
+    content: 'Loading';
+    position: absolute;
+    left: 0;
+    top: 0;
+    animation: fadeLeft 0.5s forwards ease;
+    animation-delay: 3.2s;
+}
+
+@keyframes fadeLeft {
+    0% {
+        text-indent: 0;
+        opacity: 1;
+    }
+    100% {
+        text-indent: -100px;
+        opacity: 0;
+    }
+}
+
+#loading-bar-animation .status .state:after {
+    content: 'Access Granted';
+    position: absolute;
+    left: 0;
+    top: 0;
+    opacity: 0;
+    animation: fadeLeft2 0.5s forwards ease;
+    animation-delay: 3.2s;
+}
+
+@keyframes fadeLeft2 {
+    0% {
+        text-indent: 100px;
+        opacity: 0;
+    }
+    100% {
+        text-indent: 0;
+        opacity: 1;
+    }
+}
+
+#loading-bar-animation .status .percentage {
+    float: right;
+}
+
+#loading-bar-animation .status .percentage:before {
+    -webkit-animation: percentage-slow 3s forwards,
+        percentage-fast 0.4s forwards;
+    -webkit-animation-delay: 0s, 3s;
+    content: '10%';
+    font-size: 0.9em;
+    letter-spacing: 1pt;
+}
+
+@keyframes percentage-slow {
+    0% {
+        content: '6%';
+    }
+    25% {
+        content: '7%';
+    }
+    50% {
+        content: '8%';
+    }
+    75% {
+        content: '9%';
+    }
+    100% {
+        content: '10%';
+    }
+}
+
+@keyframes percentage-fast {
+    0% {
+        content: '10%';
+    }
+    100% {
+        content: '100%';
+    }
+}
+
+/* ----------     END SPINNER     ----------- */
+/* ----------     END SPINNER     ----------- */
+/* ----------     END SPINNER     ----------- */
 
 /* contact */
 /* 
@@ -504,12 +800,6 @@ body {
 .contact-button:hover .contact-button-text {
     transform: translateX(15px);
 } */
-
-
-
-
-
-
 
 /* cool blur and grid effect */
 /* 
