--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -278,6 +278,11 @@ body {
 
 /* end close button */
 
+/* ------ END NAV BAR ------ */
+/* ------ END NAV BAR ------ */
+/* ------ END NAV BAR ------ */
+/* ------ END NAV BAR ------ */
+
 /* ----------     STARS BACKGROUND     ----------- */
 /* ----------     STARS BACKGROUND     ----------- */
 /* ----------     STARS BACKGROUND     ----------- */
@@ -718,6 +723,197 @@ body {
 /* ----------     END SPINNER     ----------- */
 /* ----------     END SPINNER     ----------- */
 /* ----------     END SPINNER     ----------- */
+
+/* ----------     AUDIO MODAL     ----------- */
+/* ----------     AUDIO MODAL     ----------- */
+/* ----------     AUDIO MODAL     ----------- */
+
+input[type='range'].custom-range {
+    -webkit-appearance: none;
+    height: 16px;
+    border-radius: 5px;
+    outline: none;
+    opacity: 0.7;
+    transition: opacity 0.2s;
+}
+
+input[type='range'].custom-range:hover {
+    opacity: 1;
+}
+
+/* WebKit/Blink browsers */
+input[type='range'].custom-range::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 24px;
+    height: 24px;
+    background: #007bff;
+    cursor: pointer;
+    border-radius: 50%;
+    margin-top: -4px;
+}
+
+input[type='range'].custom-range::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 16px;
+    cursor: pointer;
+    background: #999999;
+    border-radius: 5px;
+}
+
+/* Firefox */
+input[type='range'].custom-range::-moz-range-thumb {
+    width: 24px;
+    height: 24px;
+    background: #007bff;
+    cursor: pointer;
+    border-radius: 50%;
+    border: none;
+}
+
+input[type='range'].custom-range::-moz-range-track {
+    width: 100%;
+    height: 16px;
+    cursor: pointer;
+    background: #999999;
+    border-radius: 5px;
+}
+
+input[type='range'].custom-range::-moz-range-progress {
+    background: #999999;
+}
+
+/* Internet Explorer */
+input[type='range'].custom-range::-ms-thumb {
+    width: 24px;
+    height: 24px;
+    background: #007bff;
+    cursor: pointer;
+    border-radius: 50%;
+    border: none;
+}
+
+input[type='range'].custom-range::-ms-track {
+    width: 100%;
+    height: 16px;
+    cursor: pointer;
+    background: transparent;
+    border-color: transparent;
+    color: transparent;
+}
+
+input[type='range'].custom-range::-ms-fill-lower {
+    background: #999999;
+    border-radius: 5px;
+}
+
+input[type='range'].custom-range::-ms-fill-upper {
+    background: #999999;
+    border-radius: 5px;
+}
+
+/* General styles */
+input[type='range'].custom-volume-slider {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    height: 12px;
+    border-radius: 5px;
+    background: #999999;
+    outline: none;
+    opacity: 0.7;
+    transition: opacity 0.2s;
+}
+
+input[type='range'].custom-volume-slider:hover {
+    opacity: 1;
+}
+
+/* WebKit/Blink browsers */
+input[type='range'].custom-volume-slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 20px;
+    height: 20px;
+    background: #007bff;
+    cursor: pointer;
+    border-radius: 50%;
+    margin-top: -4px;
+}
+
+input[type='range'].custom-volume-slider::-webkit-slider-runnable-track {
+    height: 12px;
+    cursor: pointer;
+    background: #999999;
+    border-radius: 5px;
+}
+
+input[type='range'].custom-volume-slider::-moz-range-thumb {
+    width: 20px;
+    height: 20px;
+    background: #007bff;
+    cursor: pointer;
+    border-radius: 50%;
+    border: none;
+}
+
+input[type='range'].custom-volume-slider::-moz-range-track {
+    height: 12px;
+    cursor: pointer;
+    background: #999999;
+    border-radius: 5px;
+}
+
+input[type='range'].custom-volume-slider::-moz-range-progress {
+    background: #999999;
+}
+
+input[type='range'].custom-volume-slider::-ms-thumb {
+    width: 20px;
+    height: 20px;
+    background: #007bff;
+    cursor: pointer;
+    border-radius: 50%;
+    border: none;
+}
+
+input[type='range'].custom-volume-slider::-ms-track {
+    height: 12px;
+    cursor: pointer;
+    background: transparent;
+    border-color: transparent;
+    color: transparent;
+}
+
+input[type='range'].custom-volume-slider::-ms-fill-lower {
+    background: #999999;
+    border-radius: 5px;
+}
+
+input[type='range'].custom-volume-slider::-ms-fill-upper {
+    background: #999999;
+    border-radius: 5px;
+}
+
+.phonk-button-text {
+    color: rgba(0, 0, 0, 0.5);
+}
+.phonk-button:hover .phonk-button-text {
+    background: linear-gradient(
+        45deg,
+        #8b00ff,
+        #ff3d00,
+        #ff9a00,
+        #ff3d00,
+        #8b00ff
+    );
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+/* ----------     END AUDIO MODAL     ----------- */
+/* ----------     END AUDIO MODAL     ----------- */
+/* ----------     END AUDIO MODAL     ----------- */
 
 /* contact */
 /* 
